Bug 47222 - Formula N() don't work properly
Summary: Formula N() don't work properly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Eike Rathke
URL:
Whiteboard: target:3.6.0.0.beta3 target:3.7.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-03-12 00:42 UTC by Szymon Nikliborc
Modified: 2012-06-26 23:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szymon Nikliborc 2012-03-12 00:42:10 UTC
Use =N("abc") formula, it gives correct response equal 0.
Use =0+N("abc") formula, it gives error (Error: No result).
Comment 1 sasha.libreoffice 2012-05-31 05:53:52 UTC
Thanks for bugreport
reproduced in 3.5.4 on Fedora 64 bit (Windows not tested)
not reproduced in 3.3.4 , therefore regression

Workaround: use =N("abc")+0 instead of =0+N("abc")
Comment 2 Kohei Yoshida 2012-06-01 12:27:19 UTC
When assessing regression, can you try against 3.4?  3.3 is too old to be useful.
Comment 3 sasha.libreoffice 2012-06-03 23:32:38 UTC
bug reproduced in 3.4.2 on Windows XP
Comment 4 Not Assigned 2012-06-26 04:04:50 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=483bba422442ba8a370d3b14d378d5d385d7dda2&g=libreoffice-3-6

resolved fdo#47222 in N() pop string constant before pushing result


It will be available in LibreOffice 3.6.
Comment 5 Not Assigned 2012-06-26 04:05:15 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e559fb28bbe65d98a7dcb4160db152d606332faa

resolved fdo#47222 in N() pop string constant before pushing result
Comment 6 sasha.libreoffice 2012-06-26 23:13:11 UTC
Thanks for fixing this bug