resolved fdo#47222 in N() pop string constant before pushing result

Change-Id: Ifd3313e45b838b3d9ab4dc8d0b4887f4836bb013
(cherry picked from commit e559fb28bbe65d98a7dcb4160db152d606332faa)