sc/source/core/tool/interpr1.cxx
@@ -2871,6 +2871,7 @@ void ScInterpreter::ScN()
             return;
         }
         case svString:
+            PopError();
             PushDouble(0);
             return;
         default:
